--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "scripts": {
-    "format": "pretty-quick --staged && prettier-package-json --write",
-    "husky": "husky install || exit 0",
-    "preinstall": "only-allow pnpm",
-    "postinstall": "pnpm husky && pnpm format",
-    "lint": "prettier --check \"{*,**/*}.{ts,js}\""
+    "build": "graph build",
+    "codegen": "graph codegen",
+    "create-local": "graph create smart-dao --node http://127.0.0.1:8020",
+    "deploy": "graph deploy --product hosted-service smart-holder/smart-dao",
+    "deploy-local": "graph deploy smart-dao --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
+    "prepare": "husky install || exit 0",
+    "pretty": "pretty-quick --staged && prettier-package-json --write"
   },
   "devDependencies": {
-    "@breathelife/prettier-plugin-sort-imports": "^3.0.5",
-    "commitlint": "^17.3.0",
-    "commitlint-config-gitmoji": "^2.2.8",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@graphprotocol/graph-cli": "^0.44.0",
+    "@graphprotocol/graph-ts": "^0.29.3",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
-    "only-allow": "^1.1.1",
     "prettier": "^2.8.1",
     "prettier-package-json": "^2.8.0",
+    "prettier-plugin-sort-imports-by-identifier": "^3.3.4",
     "pretty-quick": "^3.1.3",
     "typescript": "^4.9.4"
   }
