--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "prettier-plugin-sort-imports-by-identifier": "^3.3.4",
     "pretty-quick": "^3.1.3",
     "typescript": "^4.9.4"
-  }
+  },
+  "packageManager": "pnpm@7.19.0"
 }
