--- a/subgraph.goerli.yaml
+++ b/subgraph.goerli.yaml
@@ -130,3 +130,24 @@ templates:
           handler: handleRelease
         - event: AssetIncome(indexed address,indexed uint256,indexed address,address,uint256,uint256,uint8)
           handler: handleAssetIncome
+
+  - name: AssetInitializable
+    kind: ethereum/contract
+    network: goerli
+    source:
+      abi: Asset
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      file: ./src/vaults/asset.ts
+      entities:
+        - Asset
+      abis:
+        - name: ERC1155
+          file: ./abis/ERC1155.json
+        - name: Asset
+          file: ./abis/Asset.json
+      eventHandlers:
+        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
+          handler: handleTransferSingle
